--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                       <a 
                       target="_blank"
                       href="https://www.twitch.tv/minerva">
-                         <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/06b3498c-e817-4518-b851-c30d7f564957-profile_image-150x150.png" alt="Imagem do minerva">
+                         <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/41d9e26b-bbe0-4690-a3bb-0eba8930d368-profile_image-70x70.png " alt="Imagem do Minerva">
                       </a>  
                   </li>
 
