--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                         <a 
                         target="_blank"
                         href="https://www.twitch.tv/xarola_">
-                           <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a7b7ba35-80fb-47d1-a8ae-0031edf068c6-profile_image-150x150.png" alt="Imagem do ">
+                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a7b7ba35-80fb-47d1-a8ae
+                                  -0031edf068c6-profile_image-150x150.png" alt="Imagem do xarola ">
                         </a>  
                     </li>
 
@@ -73,7 +74,8 @@
                       <a 
                       target="_blank"
                       href="https://www.twitch.tv/minerva">
-                         <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/41d9e26b-bbe0-4690-a3bb-0eba8930d368-profile_image-70x70.png " alt="Imagem do Minerva">
+                      <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/41d9e26b-bbe0-4690-a3bb-
+                                0eba8930d368-profile_image-150x150.png" alt="Imagem do Minerva">
                       </a>  
                   </li>
 
@@ -81,7 +83,8 @@
                       <a 
                       target="_blank"
                       href="https://www.twitch.tv/liminhag0d">
-                      <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/308fa859-303d-44eb-a383-96eb6c18e78a-profile_image-150x150.png" alt="Imagem do jogo ">
+                      <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/308fa859-303d-44eb-a383-
+                                96eb6c18e78a-profile_image-150x150.png" alt="Imagem do jogo ">
                       </a>  
                   </li>
                 </ul>
