--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         <a 
                         target="_blank"
                         href="https://www.twitch.tv/xarola_">
-                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/a7b7ba35-80fb-47d1-a8ae
-                                  -0031edf068c6-profile_image-150x150.png" alt="Imagem do xarola ">
+                        <img src= "https://static-cdn.jtvnw.net/jtv_user_pictures/d3f98a74-8d93-
+                             4385-b01c-56dc174986ca-profile_image-150x150.png" alt="Imagem do Xarola">
                         </a>  
                     </li>
 
