--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                         <a 
                         target="_blank"
                         href="https://www.twitch.tv/xarola_">
-                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/d3f98a74-8d93-
-                             4385-b01c-56dc174986ca-profile_image-150x150.png" alt="Imagem do Xarola">
+                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/d3f98a74-8d93-4385-b01c-56dc174986ca-profile_image-150x150.png"
                         </a>  
                     </li>
 
